Update example environment variables with sample data

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-USER_NAME = #YOUR_SNAPCHAT_USERNAME
-USER_PASSWORD = #YOUR_SNAPCHAT_PASSWORD
+USER_NAME = jayden_mclin25
+USER_PASSWORD = Ykjayden1181!
